--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
     "postcss-loader": "^2.0.10",
+    "quill-image-extend-module": "^1.1.2",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "url-loader": "^0.6.2",
     "vue-loader": "^13.7.0",
+    "vue-quill-editor": "^3.0.6",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.13",
     "webpack": "^3.12.0",
