--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "tls": "0.0.1",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
+    "vue-social-share": "0.0.3",
     "vuex": "^3.0.1"
   }
 }
